scrollbar fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,10 +4,13 @@ html, body {
     padding: 0;
     font-family: 'Montserrat', sans-serif; 
     
+  
+    
 }
 
 ::-webkit-scrollbar {
     width: 3px;
+    height: 0px;
 }
   
 ::-webkit-scrollbar-track {
@@ -30,7 +33,7 @@ html, body {
 }
   
 #particles-js {
-  background-color: #f3f3f3;
+  background-color: #ffffff;
   position: fixed;
   top: 0;
   right: 0;
@@ -49,6 +52,7 @@ html, body {
   top: 0;
   margin-top: 15%;
   width: 100%;
+  
 }
 
 h1 {
